deployments/kubernetes/staging/gateway/apisix-dashboard.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apisix-dashboard
  labels:
    app: apisix-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apisix-dashboard
  template:
    metadata:
      labels:
        app: apisix-dashboard
    spec:
      containers:
        - name: apisix-dashboard
          image: apache/apisix-dashboard:latest
          ports:
            - containerPort: 9000
              name: http
          volumeMounts:
            - name: dashboard-config
              mountPath: /usr/local/apisix-dashboard/conf/conf.yaml
              subPath: conf.yaml
          resources:
            requests:
              cpu: '100m'
              memory: '100Mi'
            limits:
              cpu: '200m'
              memory: '128Mi'
      volumes:
        - name: dashboard-config
          configMap:
            name: dashboard-config
---
apiVersion: v1
kind: Service
metadata:
  name: apisix-dashboard
spec:
  selector:
    app: apisix-dashboard
  ports:
    - port: 9000
      name: http
      targetPort: 9000
