deployments/kubernetes/staging/gateway/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apisix-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: 'letsencrypt-dev'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gateway.tuannm.uk
      secretName: gateway-tls
  rules:
    - host: gateway.tuannm.uk
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: apisix-gateway
                port:
                  number: 9080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apisix-dashboard
                port:
                  number: 9000
